# fluxnode

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
components/duktape/: esp32_glue.c
components/duktape/config/: esp32.yaml  esp32_glue.h  gen.sh  readme.md
components/duktape/include/: duk_config.h  duktape.h
components/lora/: CMakeLists.txt  lora.c  readme.md
components/lora/include/: lora.h
components/websocket_server/: CMakeLists.txt  websocket.c
components/websocket_server/include/: websocket.h
docs/: BLE.md  Readme.md  crypto.md  filesystem.md  fluxboard.md  huzzah.md  lora.md  lorawanlib.md  platform.md  timer.md  util.md  webservice.md
docs/examples/: ble_echo_server.md  cryptotest.md  filesystem.md  lorawanscan.md  test.md
main/: CMakeLists.txt  ble_server.c  ble_support.c  board.c  button_service.c  duk_crypto.c  duk_fs.c  duk_main.c  duk_util.c  led_service.c  lora_main.c  main.c  platform.c  record.c  udp_service.c  util.c  web_service.c  wifi_service.c
main/include/: ble_server.h  ble_support.h  board.h  button_service.h  duk_crypto.h  duk_fs.h  duk_helpers.h  duk_main.h  duk_util.h  led_service.h  log.h  lora_main.h  platform.h  queue.h  record.h  udp_service.h  util.h  version  vfs_config.h  web_service.h  wifi_service.h
scripts/: json2mddoc.py
spiffs_image/: ble_echo_server.js  cryptotest.js  filesystem_test.js  index.html  lorawanlib.js  lorawanscan.js  main.js  recovery.js  test.js  timer.js  util.js  wifimgnt.js
test/: Makefile  jstest.c  queue.c
